force-app/main/default/objects/WarehouseInAdjustment__c/WarehouseInAdjustment__c.object-meta.xml
<CustomObject>
    <label>대리점입고조정</label>
    <pluralLabel>Warehouse In Adjustments</pluralLabel>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>