force-app/main/default/objects/WarehouseInAdjustment__c/fields/ConfirmTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTaxAmount__c</fullName>
    <formula>TaxPrice__c * QuantityConfirm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>