force-app/main/default/objects/WarehouseInAdjustment__c/fields/QuantityAdjustment__c.field-meta.xml
<CustomField>
    <fullName>QuantityAdjustment__c</fullName>
    <formula>Quantity__c - QuantityConfirm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>