force-app/main/default/objects/WarehouseInAdjustment__c/fields/QuantityConfirm__c.field-meta.xml
<CustomField>
    <fullName>QuantityConfirm__c</fullName>
    <label>Quantity Confirm</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>