force-app/main/default/objects/WarehouseInAdjustment__c/fields/SkuOption2__c.field-meta.xml
<CustomField>
    <fullName>SkuOption2__c</fullName>
    <label>Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>