force-app/main/default/objects/WarehouseInAdjustment__c/fields/SkuOption3__c.field-meta.xml
<CustomField>
    <fullName>SkuOption3__c</fullName>
    <label>Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>