force-app/main/default/objects/WarehouseInAdjustment__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>Tax Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxType</valueSetName>
    </valueSet>
</CustomField>