force-app/main/default/objects/WarehouseInAdjustment__c/fields/WarehousingLineItem__c.field-meta.xml
<CustomField>
    <fullName>WarehousingLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehousing LineItem</label>
    <referenceTo>WarehouseInLineItem__c</referenceTo>
    <relationshipLabel>Warehouse In Adjustment</relationshipLabel>
    <relationshipName>WarehouseInAdjustment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>